--- a/Autonomy_Project/webservice/static/style.css
+++ b/Autonomy_Project/webservice/static/style.css
@@ -9,47 +9,6 @@
     box-sizing: border-box;
 }
 
-.header{
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #939597;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-}
-
-.header h1 a{
-    text-decoration: none;
-    color: #F5dF4D;
-    font-family: abster;
-    margin: 30px;
-}
-
-.header .nav ul{
-    margin: 30px;
-}
-
-.header .nav ul li{
-    display: inline-block;
-    margin: 0 10px;
-    font-family: abster;
-}
-
-.header .nav ul li a{
-    text-decoration: none;
-    color: #F5dF4D;
-    font-weight: bolder;
-    font-size: 20px;
-}
-
-.header .nav ul li a:hover{
-    color: darkgray;
-}
-
 .container{
     width: 100%;
     height: 100vh;
@@ -65,7 +24,7 @@
 }
 
 .container .section:nth-child(1){
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/운동_1.png");
+    background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0)), url(https://www.sisajournal.com/news/photo/202105/217323_125319_5357.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
@@ -130,21 +89,12 @@
     margin-bottom: 20px;
 }
 
-.button_over1{
-    cursor: pointer;
-    background-color: black;
-}
-
-.button_over2{
-    cursor: pointer;
-}
-
 .buttons{
     cursor: pointer;
 }
 
 .ab_back{
-    background-image: url(https://src.hidoc.co.kr/image/lib/2020/4/13/1586766471495_0.jpg);
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)) ,url(https://p4.wallpaperbetter.com/wallpaper/727/472/1008/5bd0bd519b5c8-wallpaper-preview.jpg);
     background-size: cover;
     z-index: -2;
 }
@@ -166,79 +116,6 @@
     margin-bottom:10px;
 }
 
-
-/* 적용 스타일 */
-.run_section {position:relative; margin-top:300px; margin-left: 1000px; height:600px; z-index: -1;}
-.run img {width:100%;}
-.run {position:absolute;z-index:1;top:40%;left:15%;transform:translate(-50%,-50%);max-width:500px;width:100%;animation:updown .5s linear infinite alternate;}
-.hand1 {position:absolute;z-index:1;top:19.7%;left:45%;width:17%;animation:hand1 1s linear infinite alternate;transform-origin:100% 10%;}
-.hand2 {position:absolute;z-index:-1;top:19.4%;left:46%;width:16%;animation:hand2 1s linear infinite alternate;transform-origin:100% 20%;}
-.foot1-1 {position:absolute;z-index:-2;top:45%;left:48.7%;width:22%;animation:foot1-1 1s linear infinite alternate;transform-origin:40% 10%;}
-.foot1-2 {position:absolute;z-index:-1;top:92%;left:60%;width:121%;animation:foot1-2 2s linear infinite;transform-origin:26% 4%;}
-.foot1-3 {position:absolute;z-index:1;bottom:0%;right:0%;width:27%;animation: toe1 2s linear infinite;transform-origin:left bottom;}
-.foot2-1 {position:absolute;z-index:-1;top:45%;left:48.7%;width:22%;animation:foot2-1 1s linear infinite alternate;transform-origin:40% 10%;}
-.foot2-2 {position:absolute;z-index:-1;top:92%;left:60%;width:121%;animation:foot2-2 2s linear infinite;transform-origin:26% 4%;}
-.foot2-3 {position:absolute;z-index:1;bottom:0%;right:0%;width:27%;animation: toe2 2s linear infinite;transform-origin:left bottom;}
-
-
-/* 키프레임 */
-@keyframes hand1{
-    from {transform:rotate(0);}
-    to {transform:rotate(-60deg);}
-}
-
-@keyframes hand2{
-    from {transform:rotate(-90deg);}
-    to {transform:rotate(0);}
-}
-
-@keyframes foot1-1{
-    from {transform:rotate(50deg);}
-    to {transform:rotate(0);}
-}
-
-@keyframes foot1-2{
-    from {transform:rotate(67deg);}
-    40% {transform:rotate(50deg);}
-    50% {transform:rotate(0);}
-    90% {transform:rotate(0);}
-    to {transform:rotate(67deg);}
-}
-
-@keyframes toe1{
-    from {transform:rotate(0deg);}
-    50% {transform:rotate(0deg);}
-    80% {transform:rotate(-30deg);}
-    90% {transform:rotate(-30deg);}
-    to {transform:rotate(0deg);}
-}
-
-@keyframes foot2-1{
-    from {transform:rotate(0);}
-    to {transform:rotate(50deg);}
-}
-
-@keyframes foot2-2{
-    from {transform:rotate(0);}
-    40% {transform:rotate(0);}
-    50% {transform:rotate(67deg);}
-    90% {transform:rotate(50deg);}
-    to {transform:rotate(0);}
-}
-
-@keyframes toe2{
-    from {transform:rotate(0deg);}
-    30% {transform:rotate(-30deg);}
-    40% {transform:rotate(-30deg);}
-    50% {transform:rotate(0deg);}
-    to {transform:rotate(0deg);}
-}
-
-@keyframes updown{
-     from {margin-top:-8px;}
-     to {margin-top:0;}
- }
-
 .box {
     position: fixed;
     bottom: 200px;
@@ -254,14 +131,15 @@
 }
 
 .pred_box1{
-    position: fixed;
+    position: absolute;
     top: 100px;
     left: 150px;
     width: 1200px;
     height: 630px;
     border-radius : 5px;
+    border: 1px solid black;
     background-color: #5a5a5a;
-    z-index: 2;
+    z-index: -1;
     opacity: 0.7;
 }
 .pred_box2{
@@ -269,15 +147,37 @@
     width: 1100px;
     height: 120px;
     border-radius : 5px;
-    background-color: lightgoldenrodyellow;
+    background-color: #1f1f1f;
     z-index: 2;
     opacity: 0.7;
 }
 .pred_ex{
     text-align: center;
-    margin-top: 120px;
-    font-size:30px;
-    color: white;
+    width:300px;
+    margin-left:600px;
+    margin-top: 115px;
+    font-size:35px;
+    color: #ffeb00;
     font-weight: 900;
-    z-index: 3;
+    z-index: 2;
+}
+
+.index_buttons{
+    background-color: black;
+    transition: background, 0.4s;
+}
+
+.index_buttons:hover{
+    background-color: red;
+}
+
+.start_button{
+    background-color: rgba(255,255,255,0);
+    transition: background, 0.4s;
+    border:1px solid black;
+}
+
+.start_button:hover{
+    border:0px solid red;
+    background-color: red;
 }
