--- a/Autonomy_Project/webservice/templates/ab.html
+++ b/Autonomy_Project/webservice/templates/ab.html
@@ -3,42 +3,32 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/style.css">
+
 </head>
 
-<header>
-    <div class="header">
-        <h1><a herf="/">HEALTH CARE</h1>
-        <div class="nav">
-            <ul>
-                <li><a href="/">main</a></li>
-                <li><a href="#">introduce</a></li>
-                <li><a href="/select">select age</a></li>
-                <li><a href="/input10">input</a></li>
-                <li><a href="/predict">predict</a></li>
-            </ul>
-        </div>
-    </div>
-
-
-</header>
 <body class="ab_back">
+    <div style="position: absolute; margin-left:530px; margin-top:50px; width:25px; height: 25px; background-color: #00b422; color:white; text-align: center;">1</div>
+    <div style="position: absolute; margin-left:760px; margin-top:50px; width:25px; height: 25px; background-color: white; color:black; text-align: center;">2</div>
+    <div style="position: absolute; margin-left:990px; margin-top:50px; width:25px; height: 25px; background-color: white; color:black; text-align: center;">3</div>
+    <div style="position: absolute; margin-left:530px; margin-top: 62.5px; width:480px; height:5px; background-color: white; z-index: -1;"></div>
+    <div style="position: absolute; margin-left:500px; margin-top:80px; color:#00b422">기본 정보 입력</div>
+    <div style="position: absolute; margin-left:720px; margin-top:80px; color:white">신체 정보 입력</div>
+    <div style="position: absolute; margin-left:950px; margin-top:80px; color:white">측정 정보 입력</div>
 
-<div style="position:absolute; width:450px; margin-left:550px; margin-top:100px; text-align: center; z-index: 5">
-   <br><br>
-        <div class="input_list" style="text-align:center; margin-top:150px; color: floralwhite;">닉네임</div><br>
-        <form method="POST", action="{{url_for('nickname')}}">
-            <input id='username', name="nickname", style="width:450px; height:40px; border: 1px solid darkgrey;"><br><br><br>
-        </form>
-        <a href="/input10" style="position:absolute; margin-left:-225px;">
-            <button class="buttons" style="border-radius: 10px 10px 10px 10px; font-size:17px; border:0px; width:120px; height:60px; background-color: #2d2d2d; color:#F5dF4D; font-weight: bold">19세 이하</button>
-        </a>
-        <a href="/input20" style="position:absolute; margin-left:-60px;">
-            <button class="buttons" style="border-radius: 10px 10px 10px 10px; font-size:17px; border:0px; width:120px; height:60px; background-color: #2d2d2d; color:#F5dF4D; font-weight: bold">20 ~ 59세</button>
-        </a>
-        <a href="/input60" style="position:absolute; margin-left:105px;">
-            <button class="buttons" style="border-radius: 10px 10px 10px 10px; font-size:17px; border:0px; width:120px; height:60px; background-color: #2d2d2d; color:#F5dF4D; font-weight: bold">60세 이상</button>
-        </a>
-</div>
-<div class="box"></div>
+
+    <div style="position:absolute; width:450px; height:500px; margin-left:550px; margin-top:180px; box-shadow:  1px 1px 7px 5px gray; text-align: center; background-color:white; z-index: 5;">
+    <br><br>
+    <div style="position: absolute; color:black; margin-left:150px; margin-top:-20px; font-size: 25px;">STEP1 <br> 기본 정보 입력</div>
+    <form method="POST", action="{{url_for('nickname')}}">
+        <div style="position: absolute; margin-left:-230px; margin-top:180px;">
+            <input name="nickname" , style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-70px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  닉네임을 입력해주세요." ><br><br><br>
+            <input name="age", style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-50px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  나이를 입력해주세요."><br><br><br>
+            <input type="radio" name="chk_sex" value="남자" checked="checked" style="position:absolute; margin-left:400px; margin-top:-15px;"><div style="width:50px; position:absolute; margin-left:350px; margin-top:-25px; font-size:20px;">남자</div>
+            <input type="radio" name="chk_sex" value="여자" style="position:absolute; margin-left:500px; margin-top:-15px;"><div style="width:50px; position:absolute; margin-left:450px; margin-top:-25px; font-size:20px;">여자</div>
+        </div>
+    </form>
+    <a class="index_buttons" href="/select2" style="position:absolute; width:120px; height:60px; text-align:center; font-size:20px; color:white; margin-left:-65px; margin-top: 350px; line-height: 60px; border-radius: 10px 10px 10px 10px; text-decoration-line:none;">
+        다음
+    </a>
 </body>
 </html>
