--- a/Autonomy_Project/webservice/templates/index.html
+++ b/Autonomy_Project/webservice/templates/index.html
@@ -4,33 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>인공지능 헬스케어</title>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 
-<header>
-    <div class="header">
-        <h1><a herf="/">HEALTH CARE</h1>
-        <div class="nav">
-            <ul>
-                <li><a href="/">main</a></li>
-                <li><a href="#">introduce</a></li>
-                <li><a href="/select">select age</a></li>
-                <li><a href="/input10">input</a></li>
-                <li><a href="/predict">predict</a></li>
-            </ul>
-        </div>
-    </div>
-</header>
-
 <body>
     <div class="container">
-        <div class="section">
+        <div class="section" >
+            <div style="position:absolute; width:200px; height:80px; background-color: black; font-size:20px; color:white; margin-left:100px; margin-top: 60px; line-height: 40px; border-radius: 10px 10px 10px 10px;">
+                <span style="margin-left:40px; line-height: 75px;"> AI Health care </span>
+            </div>
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:800px; margin-top: 60px; line-height: 75px; border-radius: 10px 0px 0px 10px; text-decoration-line:none;">
+                서비스 소개
+            </a>
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:950px; margin-top: 60px; line-height: 75px; text-decoration-line:none;">
+                운동 자세 교정
+            </a>
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:1100px; margin-top: 60px; line-height: 75px; text-decoration-line:none;">
+                측정 센터 소개
+            </a>
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:1250px; margin-top: 60px; line-height: 75px; border-radius: 0px 10px 10px 0px; text-decoration-line:none;">
+                고객 문의
+            </a>
             <div class="hero">
-                <h2>체력을 고려한<br>적절한 운동을<br>처방해드립니다.</h2>
+                <h2 style="font-size:62px; margin-top:-100px; margin-left:170px;">당신의 체력을 고려한<br>적절한 운동을 처방해드립니다.</h2>
                 <p></p>
-                <a href="/select" style="position:absolute; margin-left:-90px;">
-                    <button class="button_over1" style="font-size: 20px; font-weight: bold; border-radius: 20px 20px 20px 20px; border:0px ; width:180px; height:60px; color:#F5dF4D; background-color: #939597" onMouseover="this.className='button_over2'" onMouseout="this.className='button_over1'">검사 시작하기</button>
+                <div style="position: absolute; width:250px; height: 250px; margin-top:50px; margin-left:170px; background-color: black">
+                    <img style="width:250px; height:190px;" src="https://img.freepik.com/free-photo/health-concept-with-clipboard-health-check-related-items_127345-111.jpg?size=626&ext=jpg">
+                </div>
+                <a class="start_button" href="/select" style="position:absolute; width:250px; height:60px; text-align:center; font-size:15px; color:white; margin-left:-350px; margin-top: 240px; line-height: 55px; text-decoration-line:none;">
+                    간단한 검사
+                </a>
+
+                <div style="position: absolute; width:250px; height: 250px; background-color: black; margin-top:50px; margin-left:450px;">
+                    <img style="width:250px; height:190px;" src="https://cdn.crowdpic.net/list-thumb/thumb_l_82E62BB91052F901A7BF69D93580BED9.jpg">
+                </div>
+                <a class="start_button" href="" style="position:absolute; width:250px; height:60px; text-align:center; font-size:15px; color:white; margin-left:-70px; margin-top: 240px; line-height: 55px; text-decoration-line:none;">
+                    정밀 검사 (개발중)
                 </a>
             </div>
         </div>
