--- a/Autonomy_Project/webservice/templates/ab_3.html
+++ b/Autonomy_Project/webservice/templates/ab_3.html
@@ -16,11 +16,11 @@
     <div style="position:absolute; width:450px; height:500px; margin-left:550px; margin-top:180px; box-shadow:  1px 1px 7px 5px gray; text-align: center; background-color:white; z-index: 5">
     <div style="position: absolute; color:black; margin-left:150px; margin-top:20px; font-size: 25px;">STEP3 <br> 측정 정보 입력</div>
 
-    <input style="position:absolute; width:350px; height:50px; margin-left:-200px; margin-top:130px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  앉아 윗몸 앞으로 굽히기(cm)">
+    <input name="user_sit" style="position:absolute; width:350px; height:50px; margin-left:-200px; margin-top:130px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  앉아 윗몸 앞으로 굽히기(cm)">
         <a href="" style="position:absolute; width:50px; height: 50px; margin-left:160px; margin-top:130px; line-height:15px; text-decoration-line:none; font-size:14px; background-color: #a8d200; color:white; border-radius: 10px 10px 10px 10px;"><br>측정 <br>☞</a>
-    <input style="position:absolute; width:350px; height:50px; margin-left:-200px; margin-top:220px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  교차윗몸일으키기(회/1분)">
+    <input name="user_cross" style="position:absolute; width:350px; height:50px; margin-left:-200px; margin-top:220px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  교차윗몸일으키기(회/1분)">
         <a href="" style="position:absolute; width:50px; height: 50px; margin-left:160px; margin-top:220px; line-height:15px; text-decoration-line:none; font-size:14px; background-color: #a8d200; color:white; border-radius: 10px 10px 10px 10px;"><br>측정 <br>☞</a>
-    <input style="position:absolute; width:350px; height:50px; margin-left:-200px; margin-top:310px; border: 0px solid black; background-color:#eeeeee; font-size:20px; " placeholder="  제자리멀리뛰기(cm)">
+    <input name="user_jump" style="position:absolute; width:350px; height:50px; margin-left:-200px; margin-top:310px; border: 0px solid black; background-color:#eeeeee; font-size:20px; " placeholder="  제자리멀리뛰기(cm)">
         <a href="" style="position:absolute; width:50px; height: 50px; margin-left:160px; margin-top:310px; line-height:15px; text-decoration-line:none; font-size:14px; background-color: #a8d200; color:white; border-radius: 10px 10px 10px 10px;"><br>측정 <br>☞</a>
 
 
