--- a/Autonomy_Project/webservice/templates/ab_2.html
+++ b/Autonomy_Project/webservice/templates/ab_2.html
@@ -17,24 +17,24 @@
     <div style="position:absolute; width:450px; height:500px; margin-left:550px; margin-top:180px; box-shadow:  1px 1px 7px 5px gray; text-align: center; background-color:white; z-index: 5">
     <div style="position: absolute; color:black; margin-left:150px; margin-top:20px; font-size: 25px;">STEP2 <br> 신체 정보 입력</div>
 
-    <input style="position:absolute; width:400px; height:50px; margin-left:-200px; margin-top:100px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  키(cm)">
-    <input style="position:absolute; width:400px; height:50px; margin-left:-200px; margin-top:170px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  몸무게(kg)">
-    <input style="position:absolute; width:400px; height:50px; margin-left:-200px; margin-top:240px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  허리 둘레(cm)">
+    <input name="user_height" style="position:absolute; width:400px; height:50px; margin-left:-200px; margin-top:100px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  키(cm)">
+    <input name="user_weight" style="position:absolute; width:400px; height:50px; margin-left:-200px; margin-top:170px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  몸무게(kg)">
+    <input name="user_waist" style="position:absolute; width:400px; height:50px; margin-left:-200px; margin-top:240px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  허리 둘레(cm)">
 
     <div style="position: absolute; font-size: 20px; margin-left:50px; margin-top:320px;">혈압</div>
-    <input type="radio" name="chk_bp" value="저혈압" style="position:absolute; margin-left:-100px; margin-top:327px;"><div style="width:60px; position:absolute; margin-left:140px; margin-top:320px; font-size:20px; font-weight: 200;">저혈압</div>
-    <input type="radio" name="chk_bp" value="표준" checked="checked" style="position:absolute; margin-left:10px; margin-top:327px;"><div style="width:60px; position:absolute; margin-left:240px; margin-top:320px; font-size:20px; font-weight: 200;">표준</div>
-    <input type="radio" name="chk_bp" value="고혈압" style="position:absolute; margin-left:100px; margin-top:327px;"><div style="width:60px; position:absolute; margin-left:340px; margin-top:320px; font-size:20px; font-weight: 200;">고혈압</div>
+    <input type="radio" name="user_bp" value=1 style="position:absolute; margin-left:-100px; margin-top:327px;"><div style="width:60px; position:absolute; margin-left:140px; margin-top:320px; font-size:20px; font-weight: 200;">저혈압</div>
+    <input type="radio" name="user_bp" value=2 checked="checked" style="position:absolute; margin-left:10px; margin-top:327px;"><div style="width:60px; position:absolute; margin-left:240px; margin-top:320px; font-size:20px; font-weight: 200;">표준</div>
+    <input type="radio" name="user_bp" value=3 style="position:absolute; margin-left:100px; margin-top:327px;"><div style="width:60px; position:absolute; margin-left:340px; margin-top:320px; font-size:20px; font-weight: 200;">고혈압</div>
 
     <div style="position: absolute; font-size: 20px; margin-left:35px; margin-top:380px;">체지방률</div>
     <div style="position: absolute; width:300px; height: 70px; margin-top: 360px; margin-left:130px;">
         저체중  &nbsp;&nbsp; 표준 &nbsp;&nbsp;&nbsp; 경도 &nbsp;&nbsp;&nbsp;&nbsp 중도  &nbsp;&nbsp;&nbsp&nbsp; 고도<br>
         ←―――――――――――――――→	<br>
-        <input type="radio" name="chk_bfp">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" name="chk_bfp">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" name="chk_bfp" checked="checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" name="chk_bfp">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" name="chk_bfp">
+        <input type="radio" name="user_bfp" value=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="radio" name="user_bfp" value=2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="radio" name="user_bfp" value=3 checked="checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="radio" name="user_bfp" value=4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="radio" name="user_bfp" value=5>
     </div>
     <a class="index_buttons" href="/select3" style="position:absolute; width:90px; height:45px; text-align:center; font-size:20px; color:white; margin-left:-50px; margin-top: 440px; line-height:40px; border-radius: 10px 10px 10px 10px; text-decoration-line:none;">
         다음
