--- a/Autonomy_Project/webservice/templates/index.html
+++ b/Autonomy_Project/webservice/templates/index.html
@@ -7,40 +7,41 @@
 
     <title>인공지능 헬스케어</title>
     <link rel="stylesheet" href="../static/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="section" >
-            <div style="position:absolute; width:200px; height:80px; background-color: black; font-size:20px; color:white; margin-left:100px; margin-top: 60px; line-height: 40px; border-radius: 10px 10px 10px 10px;">
-                <span style="margin-left:40px; line-height: 75px;"> AI Health care </span>
+            <div style="position:absolute; width:300px; height:80px; font-size:50px; color:#f700ff; margin-left:100px; margin-top: 40px; line-height: 40px; border-radius: 10px 10px 10px 10px;">
+                <span style="margin-left:-70px; margin-top:-100px; line-height: 0px; font-family: 'Yellowtail', cursive;"> AI Health care </span>
             </div>
-            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:800px; margin-top: 60px; line-height: 75px; border-radius: 10px 0px 0px 10px; text-decoration-line:none;">
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:60px; text-align:center; font-size:19px; color:white; margin-left:860px; margin-top: 30px; line-height: 60px; border-radius: 10px 0px 0px 10px; text-decoration-line:none;">
                 서비스 소개
             </a>
-            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:950px; margin-top: 60px; line-height: 75px; text-decoration-line:none;">
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:60px; text-align:center; font-size:19px; color:white; margin-left:1010px; margin-top: 30px; line-height: 60px; text-decoration-line:none;">
                 운동 자세 교정
             </a>
-            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:1100px; margin-top: 60px; line-height: 75px; text-decoration-line:none;">
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:60px; text-align:center; font-size:19px; color:white; margin-left:1160px; margin-top: 30px; line-height: 60px; text-decoration-line:none;">
                 측정 센터 소개
             </a>
-            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:80px; text-align:center; font-size:17px; color:white; margin-left:1250px; margin-top: 60px; line-height: 75px; border-radius: 0px 10px 10px 0px; text-decoration-line:none;">
+            <a class="index_buttons" href="/select" style="position:absolute; width:150px; height:60px; text-align:center; font-size:19px; color:white; margin-left:1310px; margin-top: 30px; line-height: 60px; border-radius: 0px 10px 10px 0px; text-decoration-line:none;">
                 고객 문의
             </a>
             <div class="hero">
-                <h2 style="font-size:62px; margin-top:-100px; margin-left:170px;">당신의 체력을 고려한<br>적절한 운동을 처방해드립니다.</h2>
+                <h2 style="font-size:58px; margin-top:-100px; margin-left:40px; color:#ffffff">당신의 체력을 고려한<br>적절한 운동을 처방해드립니다.</h2>
                 <p></p>
-                <div style="position: absolute; width:250px; height: 250px; margin-top:50px; margin-left:170px; background-color: black">
+                <div style="position: absolute; width:250px; height: 250px; margin-top:50px; margin-left:36px; background-color: black">
                     <img style="width:250px; height:190px;" src="https://img.freepik.com/free-photo/health-concept-with-clipboard-health-check-related-items_127345-111.jpg?size=626&ext=jpg">
                 </div>
-                <a class="start_button" href="/select" style="position:absolute; width:250px; height:60px; text-align:center; font-size:15px; color:white; margin-left:-350px; margin-top: 240px; line-height: 55px; text-decoration-line:none;">
+                <a class="start_button" href="/select" style="position:absolute; width:250px; height:60px; text-align:center; font-size:20px; color:white; margin-left:-350px; margin-top: 240px; line-height: 60px; text-decoration-line:none;">
                     간단한 검사
                 </a>
 
-                <div style="position: absolute; width:250px; height: 250px; background-color: black; margin-top:50px; margin-left:450px;">
+                <div style="position: absolute; width:250px; height: 250px; background-color: black; margin-top:50px; margin-left:316px;">
                     <img style="width:250px; height:190px;" src="https://cdn.crowdpic.net/list-thumb/thumb_l_82E62BB91052F901A7BF69D93580BED9.jpg">
                 </div>
-                <a class="start_button" href="" style="position:absolute; width:250px; height:60px; text-align:center; font-size:15px; color:white; margin-left:-70px; margin-top: 240px; line-height: 55px; text-decoration-line:none;">
+                <a class="start_button" href="" style="position:absolute; width:250px; height:60px; text-align:center; font-size:20px; color:white; margin-left:-70px; margin-top: 240px; line-height:60px; text-decoration-line:none;">
                     정밀 검사 (개발중)
                 </a>
             </div>
