--- a/Autonomy_Project/webservice/templates/predict_ex.html
+++ b/Autonomy_Project/webservice/templates/predict_ex.html
@@ -13,23 +13,23 @@
     </div>
     <div style="position: absolute; width:300px; height: 330px; text-align:center; opacity: 0.7; margin-left:100px; margin-top:70px; font-size:23px; background-color: black; color:white; border-radius: 10px 10px 10px 10px; z-index: 1;">
         <span style="position: absolute; color:#ff9900; margin-left:-50px; font-weight: 900; font-size:25px; margin-top: 20px;">준비운동</span>
-        <br><br><br>
-        목 스트레칭<br><br>
-        전신 루틴 스트레칭<br><br>
+        <br><br><br><br>
+        목 스트레칭<br><br><br>
+        전신 루틴 스트레칭<br><br><br>
         하지 루틴 스트레칭1
     </div>
     <div style="position: absolute; width:300px; height: 330px; text-align:center; margin-left:600px; margin-top:70px; background-color: black; opacity: 0.7; border-radius: 10px 10px 10px 10px; color:white; font-size:23px; z-index: 1;">
         <span style="position: absolute; color:#ff9900; margin-left:-40px; font-weight: 900; font-size:25px; margin-top: 20px;">본 운동</span>
-        <br><br><br>
-        누워서 엉덩이 들어올리기<br><br>
-        배스트레칭<br><br>
-        엉덩이 스트레칭
+        <br><br><br><br>
+        누워서 엉덩이 들어올리기<br><br><br>
+        수영<br><br><br>
+        실내 자전거타기
     </div>
     <div style="position: absolute; width:300px; height: 330px; text-align:center; margin-left:1100px; margin-top:70px; background-color: black; opacity: 0.7; border-radius: 10px 10px 10px 10px; color:white; font-size:23px; z-index: 1;">
         <span style="position: absolute; color:#ff9900; margin-left:-60px; font-weight: 900; font-size:25px; margin-top: 20px;">마무리 운동</span>
-        <br><br><br>
+        <br><br><br><br>
         자가근막이완술 <br>루틴 스트레칭<br><br>
-        전신 루틴 스트레칭<br><br>
+        전신 루틴 스트레칭<br><br><br>
         하지 루틴 스트레칭1
     </div>
     <div style="position: absolute; font-size:130px; color:black; margin-left:470px; margin-top:150px; opacity: 0.7; font-weight: 900;">
