--- a/Autonomy_Project/webservice/templates/ab.html
+++ b/Autonomy_Project/webservice/templates/ab.html
@@ -20,12 +20,15 @@
     <br><br>
     <div style="position: absolute; color:black; margin-left:150px; margin-top:-20px; font-size: 25px;">STEP1 <br> 기본 정보 입력</div>
     <div style="position: absolute; margin-left:-230px; margin-top:180px;">
-        <input style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-70px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  닉네임을 입력해주세요." ><br><br><br>
-        <input name="user_age" style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-50px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  나이를 입력해주세요."><br><br><br>
-        <input type="radio" name="user_sex" value=1 checked="checked" style="position:absolute; margin-left:400px; margin-top:-15px;"><div style="width:50px; position:absolute; margin-left:350px; margin-top:-20px; font-size:20px;">남자</div>
-        <input type="radio" name="user_sex" value=0 style="position:absolute; margin-left:500px; margin-top:-15px;"><div style="width:50px; position:absolute; margin-left:450px; margin-top:-20px; font-size:20px;">여자</div>
+        <form method="POST", action="{{ url_for('arr') }}">
+            <input name = "id" style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-70px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  닉네임을 입력해주세요." ><br><br><br>
+            <input name = "password" style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-50px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  비밀번호를 입력해주세요." ><br><br><br>
+            <input name="age" style="position:absolute; width:400px; height:50px; margin-left:250px; margin-top:-30px; border: 0px solid black; background-color:#eeeeee; font-size:20px;" placeholder="  나이를 입력해주세요."><br><br><br>
+            <input type="radio" name="male" value=1 checked="checked" style="position:absolute; margin-left:400px; margin-top:-10px;"><div style="width:50px; position:absolute; margin-left:350px; margin-top:-15px; font-size:20px;">남자</div>
+            <input type="radio" name="female" value=0 style="position:absolute; margin-left:500px; margin-top:-10px;"><div style="width:50px; position:absolute; margin-left:450px; margin-top:-15px; font-size:20px;">여자</div>
+        </form>
     </div>
-    <a class="index_buttons" href="/select2" style="position:absolute; width:120px; height:60px; text-align:center; font-size:20px; color:white; margin-left:-65px; margin-top: 350px; line-height: 60px; border-radius: 10px 10px 10px 10px; text-decoration-line:none;">
+    <a class="index_buttons" href="/select2" style="position:absolute; width:120px; height:60px; text-align:center; font-size:20px; color:white; margin-left:-65px; margin-top: 375px; line-height: 60px; border-radius: 10px 10px 10px 10px; text-decoration-line:none;">
         다음
     </a>
 </body>
